# iterum

./: .gitignore  .pre-commit-config.yaml  404.html  LICENSE.txt  README.md  hatch.toml  index.html  mkdocs.yml  objects.inv  pyproject.toml  search.json  sitemap.xml  zensical.toml
.github/workflows/: check-docs.yml  lint.yml  test.yml
api/: index.html
docs/: api.md  index.md
iterum/: __init__.py  _diterum.py  _helpers.py  _iter.py  _iterum.py  _notset.py  _option.py  _ordering.py  _seq.py  _singleton.py  _type_helpers.py
rust_iterator/: __about__.py  __init__.py  _iter.py  _iterator.py  _notset.py  _option.py  _ordering.py  _singleton.py  _type_helpers.py
search/: search_index.json
src/iterum/: __init__.py  _diterum.py  _iterum.py  _notset.py  _option.py  _ordering.py  _seq.py  _singleton.py  _type_helpers.py
stylesheets/: extra.css
tests/: test_diterum.py  test_iter.py  test_iterum.py  test_option.py  test_seq.py  test_some.py
type_tests/: option_helpers.py  type_iter.py  type_nil.py  type_option.py  type_seq.py  type_some.py
