[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[project]
name = "iterum"
description = 'Rusty iterators in Python.'
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
keywords = []
authors = [
  { name = "Tyler Smart", email = "tjsmart@ucsc.edu" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
]
version = "0.2.0"

[dependency-groups]
dev = [
    "pytest",
    "pytest-cov",
    "ruff>=0.8.0",
    "ty>=0.0.34",
]

docs = [
    "mkdocs~=1.4.3",
    "mkdocs-material~=9.1.17",
    "mkdocs-minify-plugin~=0.5.0",
    "mkdocs-git-revision-date-localized-plugin~=1.1.0",
    "mkdocstrings-python~=1.1.2",
    "mkdocs-redirects~=1.1.0",
    "mkdocs-glightbox~=0.3.0",
    "mike @ https://github.com/jimporter/mike/archive/392d57b8bb9d14bcedf2451a0dc302709f8055eb.zip",
    "mkdocs-click~=0.8.0",
    "pymdown-extensions~=10.0.1",
    "pygments~=2.15.1",
    "linkchecker @ git+https://github.com/linkchecker/linkchecker.git@d9265bb71c2054bf57b8c5734a4825d62505c779"
]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]
ignore = ["RUF022"]
