[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[project]
name = "iterum"
description = 'Rusty iterators in Python.'
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
keywords = []
authors = [
  { name = "Tyler Smart", email = "tjsmart@ucsc.edu" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
]
version = "0.2.0"

[dependency-groups]
dev = [
    "pyright>=1.1.409",
    "pytest",
    "pytest-cov",
    "ruff>=0.8.0",
]

docs = [
    "mkdocs~=1.6",
    "mkdocs-material~=9.5",
    "mkdocs-minify-plugin~=0.8",
    "mkdocs-git-revision-date-localized-plugin~=1.4",
    "mkdocstrings[python]~=0.30",
    "mkdocs-redirects~=1.2",
    "mkdocs-glightbox~=0.4",
    "mike~=2.1",
    "mkdocs-click~=0.8",
    "pymdown-extensions~=10.7",
    "pygments~=2.18",
    "linkchecker>=10,<11",
]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]
ignore = ["RUF022"]
