[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[project]
name = "iterum"
description = 'Rusty iterators in Python.'
readme = "README.md"
requires-python = ">=3.14"
license = "MIT"
keywords = []
authors = [
  { name = "Tyler Smart", email = "tjsmart@ucsc.edu" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: Implementation :: CPython",
]
version = "0.3.0"

[dependency-groups]
dev = [
    "pyright>=1.1.409",
    "pytest",
    "pytest-cov",
    "ruff>=0.8.0",
]

docs = [
    "zensical",
    "mkdocstrings-python",
]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]
ignore = ["RUF022"]
